// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run() should emit a start event of expected shape 1`] = `
Array [
  "start",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  },
]
`;

exports[`run() when there are no outdated dependencies should emit an end event of expected shape 1`] = `
Array [
  "end",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
    "results": Array [],
  },
]
`;

exports[`run() when there are outdated dependencies should emit an end event of expected shape 1`] = `
Array [
  "end",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
    "results": Array [
      Object {
        "name": "updtr-test-module-2",
        "success": true,
        "version": "2.1.1",
      },
      Object {
        "name": "updtr-test-module-1",
        "success": true,
        "version": "2.0.0",
      },
    ],
  },
]
`;
